force-app/main/default/objects/Account/fields/Has_Completed_Conformance_Project__c.field-meta.xml
<CustomField>
    <fullName>Has_Completed_Conformance_Project__c</fullName>
    <formula>not( isblank( Conformance_Project_Completed__c ))</formula>
    <label>Has Completed Conformance Project</label>
    <type>Checkbox</type>
</CustomField>