force-app/main/default/objects/Account/fields/Has_Data_Feed__c.field-meta.xml
<CustomField>
    <fullName>Has_Data_Feed__c</fullName>
    <inlineHelpText>Indicate if the Client has a file imported or exported to/from ISNetworld, a WebService, or SSO. Formally called &quot;Has Data Feed&quot;</inlineHelpText>
    <label>Data Integration with ISN</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Import</fullName>
            </value>
            <value>
                <fullName>Export</fullName>
            </value>
            <value>
                <fullName>Web Service</fullName>
            </value>
            <value>
                <fullName>Single Sign-on</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>