force-app/main/default/objects/Account/fields/Has_Export__c.field-meta.xml
<CustomField>
    <fullName>Has_Export__c</fullName>
    <formula>INCLUDES(Has_Data_Feed__c, &#39;Export&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Export</label>
    <type>Checkbox</type>
</CustomField>