force-app/main/default/objects/Account/fields/Has_Import__c.field-meta.xml
<CustomField>
    <fullName>Has_Import__c</fullName>
    <formula>INCLUDES(Has_Data_Feed__c, &#39;Import&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Import</label>
    <type>Checkbox</type>
</CustomField>