force-app/main/default/objects/Account/fields/Has_International_Sites__c.field-meta.xml
<CustomField>
    <fullName>Has_International_Sites__c</fullName>
    <label>Has International Sites</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Africa</fullName>
            </value>
            <value>
                <fullName>Asia</fullName>
            </value>
            <value>
                <fullName>Australia</fullName>
            </value>
            <value>
                <fullName>Europe</fullName>
            </value>
            <value>
                <fullName>Middle East</fullName>
            </value>
            <value>
                <fullName>No International Sites</fullName>
            </value>
            <value>
                <fullName>North America</fullName>
            </value>
            <value>
                <fullName>South America</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>