force-app/main/default/objects/Account/fields/Has_ISN_language_in_contract_with_CEs__c.field-meta.xml
<CustomField>
    <fullName>Has_ISN_language_in_contract_with_CEs__c</fullName>
    <inlineHelpText>This is strictly related to the Hiring Client&#39;s contracts they have with their contractors. This is not to be associated with the Agreement the Hiring Client may or may not have with ISN.</inlineHelpText>
    <label>Has ISN language in contract with CEs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>