force-app/main/default/objects/Account/fields/Has_ISN_on_Website__c.field-meta.xml
<CustomField>
    <fullName>Has_ISN_on_Website__c</fullName>
    <formula>not(isblank( ISN_on_Company_Website__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has ISN on Website</label>
    <type>Checkbox</type>
</CustomField>