force-app/main/default/objects/Account/fields/Has_Signed_Agreement__c.field-meta.xml
<CustomField>
    <fullName>Has_Signed_Agreement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Signed Agreement</label>
    <type>Checkbox</type>
</CustomField>