force-app/main/default/objects/Account/fields/Has_Sites_in_Africa__c.field-meta.xml
<CustomField>
    <fullName>Has_Sites_in_Africa__c</fullName>
    <formula>Includes(Has_International_Sites__c,&#39;Africa&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Sites in Africa</label>
    <type>Checkbox</type>
</CustomField>