force-app/main/default/objects/Account/fields/Has_Sites_in_Middle_East__c.field-meta.xml
<CustomField>
    <fullName>Has_Sites_in_Middle_East__c</fullName>
    <formula>Includes(Has_International_Sites__c,&#39;Middle East&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Sites in Middle East</label>
    <type>Checkbox</type>
</CustomField>