force-app/main/default/objects/Account/fields/Has_Sites_in_North_America__c.field-meta.xml
<CustomField>
    <fullName>Has_Sites_in_North_America__c</fullName>
    <formula>Includes(Has_International_Sites__c,&#39;North America&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Has Sites in North America</label>
    <type>Checkbox</type>
</CustomField>