force-app/main/default/objects/Account/fields/HCE_Employee__c.field-meta.xml
<CustomField>
    <fullName>HCE_Employee__c</fullName>
    <description>Active users in ISNetworld. Used in Billing Employee Count calculation. Data point is not sent for Contractor accounts.</description>
    <label>HCE Employee</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>