force-app/main/default/objects/Account/fields/HealthBadgeStartScore__c.field-meta.xml
<CustomField>
    <fullName>HealthBadgeStartScore__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Used to track the starting checklist item count for the healthy account badge as of August 10, 2015</description>
    <label>HealthBadgeStartScore</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>