force-app/main/default/objects/Account/fields/Healthy_Account_Badge_Count__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Account_Badge_Count__c</fullName>
    <description>Numerical count of Healthy Account Badge status</description>
    <formula>IF( Badge_Item_Count__c &gt;=5, 1, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>1 = Healthy Account Badge
0 = No Healthy Account Badge</inlineHelpText>
    <label>Healthy Account Badge Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>