force-app/main/default/objects/Account/fields/Healthy_Account_Badge_Status__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Account_Badge_Status__c</fullName>
    <formula>CASE(Badge_Item_Count__c,5,IMAGE(&quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015340000024Adb&quot;, &quot;Healthy Start&quot;),
6,IMAGE(&quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015340000024Adb&quot;, &quot;Healthy Start&quot;),
7,IMAGE(&quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015340000024Adl&quot;, &quot;Health Guru&quot; ),
8,IMAGE(&quot;https://c.na29.content.force.com/servlet/servlet.FileDownload?file=015340000024Adl&quot;, &quot;Health Guru&quot; ),
9,IMAGE(&quot;https://isn--c.na29.content.force.com/servlet/servlet.ImageServer?id=015340000024Adv&amp;oid=00DL0000005xuC6&amp;lastMod=1438095764000&quot;, &quot;Health Nut&quot; ), 
10,IMAGE(&quot;https://isn--c.na29.content.force.com/servlet/servlet.ImageServer?id=015340000024Adv&amp;oid=00DL0000005xuC6&amp;lastMod=1438095764000&quot;, &quot;Health Nut&quot; ),
IMAGE(&quot;https://isn--c.na29.content.force.com/servlet/servlet.FileDownload?file=01534000002D9Pb&quot;,&quot;Couch Potato&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Badges are earned by checklist items that are added after July 1, 2015. If a badge is displayed in Salesforce and no name is present in Awarded To field, the badge was earned prior to July 1, 2015.</inlineHelpText>
    <label>Healthy Account Badge Status</label>
    <type>Text</type>
</CustomField>