force-app/main/default/objects/Account/fields/Healthy_Account_Current_Badge_Text__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Account_Current_Badge_Text__c</fullName>
    <formula>CASE(Badge_Item_Count__c,5,&quot;Healthy Start&quot;, 
6,&quot;Healthy Start&quot;, 
7,&quot;Health Guru&quot;, 
8,&quot;Health Guru&quot;, 
9,&quot;Health Nut&quot;, 
10,&quot;Health Nut&quot;,&quot;Couch Potato&quot;)</formula>
    <label>Healthy Account Current Badge (Text)</label>
    <type>Text</type>
</CustomField>