force-app/main/default/objects/Account/fields/Healthy_Start_Awarded_To__c.field-meta.xml
<CustomField>
    <fullName>Healthy_Start_Awarded_To__c</fullName>
    <inlineHelpText>Badges are earned by checklist items that are added after July 1, 2015. If a badge is displayed in Salesforce and no name is present in Awarded To field, the badge was earned prior to July 1, 2015.</inlineHelpText>
    <label>Healthy Start Awarded To</label>
    <type>TextArea</type>
</CustomField>