force-app/main/default/objects/Account/fields/Hierarchy_Employee_Count__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Employee_Count__c</fullName>
    <description>Captures employee count from child accounts in a hierarchy.</description>
    <inlineHelpText>For hierarchies only  - This field will display the total number of employees for all associated secondary accounts.</inlineHelpText>
    <label>Hierarchy Employee Count</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>