force-app/main/default/objects/Account/fields/Hierarchy_Type__c.field-meta.xml
<CustomField>
    <fullName>Hierarchy_Type__c</fullName>
    <description>Populated by ISNetworld integration.</description>
    <label>Hierarchy Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Secondary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>