force-app/main/default/objects/Account/fields/Host_UGM_HD__c.field-meta.xml
<CustomField>
    <fullName>Host_UGM_HD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Host UGM / HD</label>
    <type>Checkbox</type>
</CustomField>