force-app/main/default/objects/Account/fields/Hosted_UGM_HD__c.field-meta.xml
<CustomField>
    <fullName>Hosted_UGM_HD__c</fullName>
    <label>Hosted UGM/HD</label>
    <type>Date</type>
</CustomField>