force-app/main/default/objects/Account/fields/Implementation_at_Site_Field_Level__c.field-meta.xml
<CustomField>
    <fullName>Implementation_at_Site_Field_Level__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Implementation at Site/Field Level</label>
    <type>Checkbox</type>
</CustomField>