force-app/main/default/objects/Account/fields/Implementation_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Implementation_Checklist__c</fullName>
    <label>Implementation Checklist</label>
    <summaryFilterItems>
        <field>Account_Summary__c.RecordTypeId</field>
        <operation>equals</operation>
        <value>Implementation Checklist</value>
    </summaryFilterItems>
    <summaryForeignKey>Account_Summary__c.Account__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>