force-app/main/default/objects/Account/fields/Implementing_in_Next_90_Days__c.field-meta.xml
<CustomField>
    <fullName>Implementing_in_Next_90_Days__c</fullName>
    <formula>(Estimated_Implementation_Date__c &lt;= Today() + 90) &amp;&amp; (Estimated_Implementation_Date__c &gt;= Today())</formula>
    <label>Implementing in Next 90 Days</label>
    <type>Checkbox</type>
</CustomField>