force-app/main/default/objects/Account/fields/Import_Export__c.field-meta.xml
<CustomField>
    <fullName>Import_Export__c</fullName>
    <formula>if( Has_Export__c , TRUE, if(Has_Import__c,TRUE,FALSE))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Import / Export</label>
    <type>Checkbox</type>
</CustomField>