force-app/main/default/objects/Account/fields/Inactivated_By__c.field-meta.xml
<CustomField>
    <fullName>Inactivated_By__c</fullName>
    <label>Account Inactivated By:</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Active__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Aaron Light</fullName>
            </value>
            <value>
                <fullName>Abdulkader Al Neama</fullName>
            </value>
            <value>
                <fullName>Adam Laing</fullName>
            </value>
            <value>
                <fullName>Adam Logan</fullName>
            </value>
            <value>
                <fullName>Adrienne Turner</fullName>
            </value>
            <value>
                <fullName>Alex Bowles</fullName>
            </value>
            <value>
                <fullName>Alex Chavoya</fullName>
            </value>
            <value>
                <fullName>Alex Clausen</fullName>
            </value>
            <value>
                <fullName>Allison Purtell</fullName>
            </value>
            <value>
                <fullName>Alyson Tart</fullName>
            </value>
            <value>
                <fullName>Alyssa Savana</fullName>
            </value>
            <value>
                <fullName>Amanda Fuller</fullName>
            </value>
            <value>
                <fullName>Amanda Hobaugh</fullName>
            </value>
            <value>
                <fullName>Amanda Machado</fullName>
            </value>
            <value>
                <fullName>Amber Johnson</fullName>
            </value>
            <value>
                <fullName>Andrea Castillo</fullName>
            </value>
            <value>
                <fullName>Andrew Butin</fullName>
            </value>
            <value>
                <fullName>Andrew Menendez</fullName>
            </value>
            <value>
                <fullName>Andrew Rich</fullName>
            </value>
            <value>
                <fullName>Anne Barnett</fullName>
            </value>
            <value>
                <fullName>Belinda Field</fullName>
            </value>
            <value>
                <fullName>Ben Wickman</fullName>
            </value>
            <value>
                <fullName>Bill Busch</fullName>
            </value>
            <value>
                <fullName>Blair Kelly</fullName>
            </value>
            <value>
                <fullName>Bonney Hodges</fullName>
            </value>
            <value>
                <fullName>Brad McAnally</fullName>
            </value>
            <value>
                <fullName>Brandi Surine</fullName>
            </value>
            <value>
                <fullName>Brett Parker</fullName>
            </value>
            <value>
                <fullName>Brian Callahan</fullName>
            </value>
            <value>
                <fullName>Brittany Sizemore</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>