force-app/main/default/objects/Account/fields/Industry__c.field-meta.xml
<CustomField>
    <fullName>Industry__c</fullName>
    <inlineHelpText>Select the Primary Industry for the Account. Values depend on Vertical selected.</inlineHelpText>
    <label>Primary Industry</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Verticals__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>Industries</valueSetName>
    </valueSet>
</CustomField>