force-app/main/default/objects/Account/fields/Industry_Associations__c.field-meta.xml
<CustomField>
    <fullName>Industry_Associations__c</fullName>
    <description>NOTE --- Must update the Contact Industry Association Formula field if this field is edited for new values</description>
    <inlineHelpText>Select one or multiple industry associations / groups for the account</inlineHelpText>
    <label>Industry Associations</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>American Iron and Steel Institute (AISI)</fullName>
            </value>
            <value>
                <fullName>American Meat Institute (AMI)</fullName>
            </value>
            <value>
                <fullName>American Public Transport Assoc (APTA)</fullName>
            </value>
            <value>
                <fullName>American Water Resources Association (AWRA)</fullName>
            </value>
            <value>
                <fullName>American Water Works Association (AWWA)</fullName>
            </value>
            <value>
                <fullName>American Wind Energy Assoc (AWEA)</fullName>
            </value>
            <value>
                <fullName>American Wire Producers Association (AWPA)</fullName>
            </value>
            <value>
                <fullName>Assoc for Iron &amp; Steel Technology (AIST)</fullName>
            </value>
            <value>
                <fullName>Automotive Industry Action Group (AIAG)</fullName>
            </value>
            <value>
                <fullName>Campbell Institute</fullName>
            </value>
            <value>
                <fullName>Campus S, H &amp; Emer Mngmt Assoc (CSHEMA)</fullName>
            </value>
            <value>
                <fullName>Edison Electric Institute (EEI)</fullName>
            </value>
            <value>
                <fullName>Intl Assoc of Oil &amp; Gas Producers (IOGP)</fullName>
            </value>
            <value>
                <fullName>Intl Inst of Ammonia Refrig (IIAR)</fullName>
            </value>
            <value>
                <fullName>Maximo Utility Working Group (MUWG)</fullName>
            </value>
            <value>
                <fullName>National Association of Water Companies (NAWC)</fullName>
            </value>
            <value>
                <fullName>National Rural Water Association (NRWA)</fullName>
            </value>
            <value>
                <fullName>North American Die Casting Association (NADCA)</fullName>
            </value>
            <value>
                <fullName>Pulp and Paper Safety Assoc (PPSA)</fullName>
            </value>
            <value>
                <fullName>Refrig Eng &amp; Technicians Assoc (RETA)</fullName>
            </value>
            <value>
                <fullName>Southern Gas Assoc (SGA)</fullName>
            </value>
            <value>
                <fullName>Steel Manufacturers Association (SMA)</fullName>
            </value>
            <value>
                <fullName>Touchstone Energy Cooperatives</fullName>
            </value>
            <value>
                <fullName>Utility Supply Mngmt Alliance (USMA)</fullName>
            </value>
            <value>
                <fullName>Vol Protect Program Partic Assoc (VPPPA)</fullName>
            </value>
            <value>
                <fullName>World Steel Assoc (worldsteel)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>