force-app/main/default/objects/Account/fields/Initial_Client_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Initial_Client_Sponsor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Client who initially requested and sponsored the use of the Data Provider</inlineHelpText>
    <label>Initial Client Sponsor</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sponsored Data Providers</relationshipLabel>
    <relationshipName>SponsoredDataProviders</relationshipName>
    <type>Lookup</type>
</CustomField>