force-app/main/default/objects/Account/fields/Internal_Attendee_Notes__c.field-meta.xml
<CustomField>
    <fullName>Internal_Attendee_Notes__c</fullName>
    <inlineHelpText>Note if Brian, Marie, etc. are attending</inlineHelpText>
    <label>Internal Attendee Notes</label>
    <type>TextArea</type>
</CustomField>