force-app/main/default/objects/Account/fields/Invoice_Generation_At__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generation_At__c</fullName>
    <formula>IF(
  Invoice_Generation_Override__c&lt;60,
  IF(
    OR(ISPICKVAL(Type,&#39;Hiring Client&#39;),ISPICKVAL(Type,&#39;Contractor Operator&#39;)),
    75,
    60
  ),
  Invoice_Generation_Override__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Invoice Generation At</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>