force-app/main/default/objects/Account/fields/Invoice_Generation_Override__c.field-meta.xml
<CustomField>
    <fullName>Invoice_Generation_Override__c</fullName>
    <description>Aloha</description>
    <inlineHelpText>Enter the number of days prior to renewal a customer invoice should be generated. Field should only be edited if approved by management.</inlineHelpText>
    <label>Invoice Generation Override</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>