force-app/main/default/objects/Account/fields/Is_Committed__c.field-meta.xml
<CustomField>
    <fullName>Is_Committed__c</fullName>
    <formula>Prospect_Pipeline__c = &#39;Committed&#39; || Prospect_Pipeline__c = &#39;Won&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Committed</label>
    <type>Checkbox</type>
</CustomField>