force-app/main/default/objects/Account/fields/Is_Lapsed__c.field-meta.xml
<CustomField>
    <fullName>Is_Lapsed__c</fullName>
    <formula>TEXT(ISNetworld_Status__c) = &#39;Lapsed&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lapsed</label>
    <type>Checkbox</type>
</CustomField>