force-app/main/default/objects/Account/fields/Is_Won__c.field-meta.xml
<CustomField>
    <fullName>Is_Won__c</fullName>
    <formula>Prospect_Pipeline__c = &#39;Won&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Won</label>
    <type>Checkbox</type>
</CustomField>