force-app/main/default/objects/Account/fields/ISN_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>ISN_Company_ID__c</fullName>
    <externalId>true</externalId>
    <label>ISN Company ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>