force-app/main/default/objects/Account/fields/ISN_Company_Record__c.field-meta.xml
<CustomField>
    <fullName>ISN_Company_Record__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISN Company Record</label>
    <referenceTo>ISNCompanyRecord__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>