force-app/main/default/objects/Account/fields/ISN_Contract_Language__c.field-meta.xml
<CustomField>
    <fullName>ISN_Contract_Language__c</fullName>
    <inlineHelpText>If Client has language in contract with CEs about ISN, include specific language here</inlineHelpText>
    <label>ISN Contract Language</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>