force-app/main/default/objects/Account/fields/ISN_Data_Provider_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>ISN_Data_Provider_Account_Name__c</fullName>
    <inlineHelpText>Name as listed in ISNetworld</inlineHelpText>
    <label>ISN Data Provider Account Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>