force-app/main/default/objects/Account/fields/ISN_Functionality_Competitor_Lacks__c.field-meta.xml
<CustomField>
    <fullName>ISN_Functionality_Competitor_Lacks__c</fullName>
    <label>ISN Functionality Competitor Lacks</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>