force-app/main/default/objects/Account/fields/ISN_ID_Encrypted__c.field-meta.xml
<CustomField>
    <fullName>ISN_ID_Encrypted__c</fullName>
    <externalId>true</externalId>
    <label>ISN ID Encrypted</label>
    <length>100</length>
    <type>Text</type>
</CustomField>