force-app/main/default/objects/Account/fields/ISN_on_Company_Intranet__c.field-meta.xml
<CustomField>
    <fullName>ISN_on_Company_Intranet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ISN on Company Intranet</label>
    <type>Checkbox</type>
</CustomField>