force-app/main/default/objects/Account/fields/ISN_on_Company_Website__c.field-meta.xml
<CustomField>
    <fullName>ISN_on_Company_Website__c</fullName>
    <inlineHelpText>List the URL of the page that lists ISN requirements on the company&#39;s website.</inlineHelpText>
    <label>ISN on Company Website</label>
    <type>Url</type>
</CustomField>