force-app/main/default/objects/Account/fields/ISN_on_Website_Intranet__c.field-meta.xml
<CustomField>
    <fullName>ISN_on_Website_Intranet__c</fullName>
    <formula>IF(OR( ISN_on_Company_Intranet__c , Has_ISN_on_Website__c ),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISN on Website / Intranet</label>
    <type>Checkbox</type>
</CustomField>