force-app/main/default/objects/Account/fields/ISN_Tax_Subsidiary__c.field-meta.xml
<CustomField>
    <fullName>ISN_Tax_Subsidiary__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>ISN Tax Subsidiary</label>
    <referenceTo>ISN_Tax_Subsidiary__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>