force-app/main/default/objects/Account/fields/ISN_Unique_Strengths__c.field-meta.xml
<CustomField>
    <fullName>ISN_Unique_Strengths__c</fullName>
    <label>ISN Unique Strengths</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>