force-app/main/default/objects/Account/fields/ISN_White_Paper_Sent__c.field-meta.xml
<CustomField>
    <fullName>ISN_White_Paper_Sent__c</fullName>
    <label>ISN White Paper Sent</label>
    <type>Date</type>
</CustomField>