force-app/main/default/objects/Account/fields/ISNetworld_Status__c.field-meta.xml
<CustomField>
    <fullName>ISNetworld_Status__c</fullName>
    <label>ISNetworld Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Subscriber</fullName>
            </value>
            <value>
                <fullName>Lapsed</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>