force-app/main/default/objects/Account/fields/IsProspect__c.field-meta.xml
<CustomField>
    <fullName>IsProspect__c</fullName>
    <formula>TEXT( ISNetworld_Status__c ) = &#39;Prospect&#39; || TEXT( ISNetworld_Status__c ) = &#39;Lapsed&#39;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsProspect</label>
    <type>Checkbox</type>
</CustomField>