force-app/main/default/objects/Account/fields/jsImpacts__Data_com_does_not_auto_update__c.field-meta.xml
<CustomField>
    <fullName>jsImpacts__Data_com_does_not_auto_update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Prevents automated Clean jobs from auto-filling fields with the matched Data.com record&#39;s values.</description>
    <inlineHelpText>Exclude this record from automated field updates from Data.com Clean jobs</inlineHelpText>
    <label>Data.com Does Not Auto-Update</label>
    <type>Checkbox</type>
</CustomField>