force-app/main/default/objects/Account/fields/jsImpacts__Data_com_Matched__c.field-meta.xml
<CustomField>
    <fullName>jsImpacts__Data_com_Matched__c</fullName>
    <formula>IF( Jigsaw&lt;&gt;&quot;&quot;, &quot;Matched&quot;, &quot;Unmatched&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Data.com Matched</label>
    <type>Text</type>
</CustomField>