force-app/main/default/objects/Account/fields/Language__c.field-meta.xml
<CustomField>
    <fullName>Language__c</fullName>
    <inlineHelpText>Select the customer&#39;s language preference.</inlineHelpText>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Language_s</valueSetName>
    </valueSet>
</CustomField>