force-app/main/default/objects/Account/fields/Last_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Last_Activity_Type__c</fullName>
    <label>Last Activity Type for Account</label>
    <length>100</length>
    <type>Text</type>
</CustomField>