force-app/main/default/objects/Account/fields/Last_Meeting_Date_Account__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Date_Account__c</fullName>
    <label>Last Meeting Date (Account)</label>
    <type>Date</type>
</CustomField>