force-app/main/default/objects/Account/fields/Last_Meeting_Subject_Account__c.field-meta.xml
<CustomField>
    <fullName>Last_Meeting_Subject_Account__c</fullName>
    <label>Last Meeting Subject (Account)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>