force-app/main/default/objects/Account/fields/Last_Outreach_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Outreach_Date__c</fullName>
    <label>Last Outreach Date</label>
    <type>Date</type>
</CustomField>