force-app/main/default/objects/Account/fields/Last_Update_Relevant_to_Global_Email__c.field-meta.xml
<CustomField>
    <fullName>Last_Update_Relevant_to_Global_Email__c</fullName>
    <label>Last Update (Relevant to Global Email)</label>
    <type>TextArea</type>
</CustomField>